# scapi-python

./: .gitignore  Analysis.ipynb  GettingStarted.ipynb  README.md  pyproject.toml
script/: clean  fix  lint  qa  sync  test  type-check
src/scapi/: __init__.py  analysis.py  api.py  util.py
test/: analysis_test.py  api_test.py  util_test.py
