[project]
name = "scapi"
version = "0.1.0"
description = "Simple Shortcut API client"
readme = "README.md"
authors = [{ name = "Daniel Gregoire", email = "daniel.l.gregoire@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pyrate-limiter>=3.7.0", "requests>=2.32.3"]

[project.optional-dependencies]
analysis = [
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "matplotlib>=3.9.4",
    "duckdb>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "responses>=0.25.3",
    "ruff>=0.8.2",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.ruff.lint]
extend-select = ["I"]
